<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="我的主页"
        android:textSize="25dp"
        />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
    <Button
        android:id="@+id/btn_info"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_nor_down"
        android:elevation="9dp"
        android:gravity="center"
        android:text="@string/button11"
        android:textSize="50dp"/>

    <Button
        android:id="@+id/btn_game"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_nor_down"
        android:text="@string/button12"
        android:layout_marginTop="20dp"
        android:textSize="50dp"/>

    <Button
        android:id="@+id/btn_uploadpicture"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_gravity="center"

        android:layout_marginTop="20dp"
        android:background="@drawable/btn_nor_down"
        android:text="@string/button13"
        android:textSize="50dp"/>
</LinearLayout>



</RelativeLayout>
