<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backgray"
                android:theme="@android:style/Theme.NoTitleBar"
    >

    <LinearLayout
        android:id="@+id/ly_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_detail"
            android:layout_width="251dp"
            android:layout_height="92dp"
            android:layout_alignEnd="@+id/btn_back"
            android:layout_alignRight="@+id/btn_back"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:background="@drawable/btn_nor_down"
            android:gravity="center"
            android:text="@string/button21"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/btn_uploadphoto"
            android:layout_width="251dp"
            android:layout_height="100dp"

            android:layout_alignLeft="@+id/btn_game_record"
            android:layout_alignStart="@+id/btn_game_record"
            android:layout_below="@+id/btn_game_record"
            android:layout_gravity="center"
            android:layout_marginTop="31dp"
            android:background="@drawable/btn_nor_down"
            android:text="@string/button22"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/btn_game_record"
            android:layout_width="251dp"
            android:layout_height="100dp"
            android:layout_alignLeft="@+id/btn_detail"

            android:layout_alignStart="@+id/btn_detail"
            android:layout_below="@+id/btn_detail"
            android:layout_gravity="center"
            android:layout_marginTop="47dp"
            android:background="@drawable/btn_nor_down"
            android:text="@string/button23"
            android:textSize="50sp"/>


    </LinearLayout>

    <Button
        android:id="@+id/btn_myinfo_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ly_info"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_nor_down"
        android:text="@string/back"
        android:textColor="@color/black"
        android:layout_alignParentRight="true"
        android:textSize="30sp"/>
</RelativeLayout>
